--- a/proj3_data_preprocess.ipynb
+++ b/proj3_data_preprocess.ipynb
@@ -5,8 +5,30 @@
    "metadata": {},
    "source": [
     "Car Price Prediction: Data Preprocessing\n",
+    "\n",
     "Cyrus Kolahi\n",
+    "\n",
     "data download link: https://www.kaggle.com/datasets/asinow/car-price-dataset/data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download and save dataset\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "# Create data directory if it doesn't exist\n",
+    "if not os.path.exists('data'):\n",
+    "    os.makedirs('data')\n",
+    "\n",
+    "# Download dataset from Kaggle\n",
+    "# Note: You'll need to download manually from Kaggle since it requires authentication\n",
+    "print(\"Please download the dataset from: https://www.kaggle.com/datasets/asinow/car-price-dataset/data\")\n",
+    "print(\"Save the downloaded file as 'car_price_dataset.csv' in the 'data' folder\")\n"
    ]
   },
   {
