--- a/proj3_machine_learning.ipynb
+++ b/proj3_machine_learning.ipynb
@@ -59,8 +59,10 @@
    "source": [
     "X_train = pd.read_csv(\"data/X_train_scaled.csv\")\n",
     "X_test = pd.read_csv(\"data/X_test_scaled.csv\")\n",
+    "X_val = pd.read_csv(\"data/X_val_scaled.csv\")\n",
     "y_train = pd.read_csv(\"data/y_train_scaled.csv\")\n",
-    "y_test = pd.read_csv(\"data/y_test_scaled.csv\")\n"
+    "y_test = pd.read_csv(\"data/y_test_scaled.csv\")\n",
+    "y_val = pd.read_csv(\"data/y_val_scaled.csv\")\n"
    ]
   },
   {
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -87,19 +89,23 @@
      "output_type": "stream",
      "text": [
       "Linear Regression Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
-      "\n"
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n"
      ]
     }
    ],
    "source": [
     "LinReg = LinearRegression()\n",
     "LinReg.fit(X_train, y_train)\n",
+    "lr_val_pred = LinReg.predict(X_val)\n",
     "lr_pred = LinReg.predict(X_test)\n",
     "print(\"Linear Regression Results:\")\n",
-    "print(f\"MSE: {mean_squared_error(y_test, lr_pred):.2f}\")\n",
-    "print(f\"R2 Score: {r2_score(y_test, lr_pred):.2f}\\n\")"
+    "print(f\"Test MSE: {mean_squared_error(y_test, lr_pred):.2f}\")\n",
+    "print(f\"Val MSE: {mean_squared_error(y_val, lr_val_pred):.2f}\")\n",
+    "print(f\"Test R2 Score: {r2_score(y_test, lr_pred):.2f}\")\n",
+    "print(f\"Val R2 Score: {r2_score(y_val, lr_val_pred):.2f}\")"
    ]
   },
   {
@@ -111,24 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kernel Ridge Regression (linear kernel) Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
+      "Regression with linear kernel Results:\n",
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n",
       "\n",
-      "Kernel Ridge Regression (rbf kernel) Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
+      "Regression with rbf kernel Results:\n",
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n",
       "\n",
-      "Kernel Ridge Regression (poly kernel) Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
+      "Regression with poly kernel Results:\n",
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n",
       "\n"
      ]
     }
@@ -138,10 +150,13 @@
     "for kernel in kernels:\n",
     "    kr = KernelRidge(kernel=kernel)\n",
     "    kr.fit(X_train, y_train)\n",
-    "    kr_pred = kr.predict(X_test)\n",
-    "    print(f\"Kernel Ridge Regression ({kernel} kernel) Results:\")\n",
-    "    print(f\"MSE: {mean_squared_error(y_test, kr_pred):.2f}\")\n",
-    "    print(f\"R2 Score: {r2_score(y_test, kr_pred):.2f}\\n\")\n"
+    "    test_pred = kr.predict(X_test)\n",
+    "    val_pred = kr.predict(X_val)\n",
+    "    print(f\"Regression with {kernel} kernel Results:\")\n",
+    "    print(f\"Test MSE: {mean_squared_error(y_test, test_pred):.2f}\")\n",
+    "    print(f\"Val MSE: {mean_squared_error(y_val, val_pred):.2f}\")\n",
+    "    print(f\"Test R2 Score: {r2_score(y_test, test_pred):.2f}\")\n",
+    "    print(f\"Val R2 Score: {r2_score(y_val, val_pred):.2f}\\n\")\n"
    ]
   },
   {
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -171,12 +186,16 @@
      "output_type": "stream",
      "text": [
       "Support Vector Regression (linear kernel) Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n",
       "\n",
       "Support Vector Regression (rbf kernel) Results:\n",
-      "MSE: 0.00\n",
-      "R2 Score: 1.00\n",
+      "Test MSE: 0.00\n",
+      "Val MSE: 0.00\n",
+      "Test R2 Score: 1.00\n",
+      "Val R2 Score: 1.00\n",
       "\n"
      ]
     },
@@ -193,8 +212,10 @@
      "output_type": "stream",
      "text": [
       "Support Vector Regression (poly kernel) Results:\n",
-      "MSE: 0.05\n",
-      "R2 Score: 0.95\n",
+      "Test MSE: 0.05\n",
+      "Val MSE: 0.05\n",
+      "Test R2 Score: 0.95\n",
+      "Val R2 Score: 0.95\n",
       "\n"
      ]
     }
@@ -204,9 +225,12 @@
     "    svr = SVR(kernel=kernel)\n",
     "    svr.fit(X_train, y_train)\n",
     "    svr_pred = svr.predict(X_test)\n",
+    "    svr_val_pred = svr.predict(X_val)\n",
     "    print(f\"Support Vector Regression ({kernel} kernel) Results:\")\n",
-    "    print(f\"MSE: {mean_squared_error(y_test, svr_pred):.2f}\")\n",
-    "    print(f\"R2 Score: {r2_score(y_test, svr_pred):.2f}\\n\")"
+    "    print(f\"Test MSE: {mean_squared_error(y_test, svr_pred):.2f}\")\n",
+    "    print(f\"Val MSE: {mean_squared_error(y_val, svr_val_pred):.2f}\")\n",
+    "    print(f\"Test R2 Score: {r2_score(y_test, svr_pred):.2f}\")\n",
+    "    print(f\"Val R2 Score: {r2_score(y_val, svr_val_pred):.2f}\\n\")"
    ]
   },
   {
@@ -218,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -226,19 +250,24 @@
      "output_type": "stream",
      "text": [
       "Decision Tree Results:\n",
-      "MSE: 0.07\n",
-      "R2 Score: 0.92\n",
+      "Test MSE: 0.07\n",
+      "Val MSE: 0.08\n",
+      "Test R2 Score: 0.93\n",
+      "Val R2 Score: 0.92\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "dt = DecisionTreeRegressor(random_state=42)\n",
+    "dt = DecisionTreeRegressor(random_state=9)\n",
     "dt.fit(X_train, y_train)\n",
-    "dt_pred = dt.predict(X_test)\n",
+    "test_pred = dt.predict(X_test)\n",
+    "val_pred = dt.predict(X_val)\n",
     "print(\"Decision Tree Results:\")\n",
-    "print(f\"MSE: {mean_squared_error(y_test, dt_pred):.2f}\")\n",
-    "print(f\"R2 Score: {r2_score(y_test, dt_pred):.2f}\\n\")"
+    "print(f\"Test MSE: {mean_squared_error(y_test, test_pred):.2f}\")\n",
+    "print(f\"Val MSE: {mean_squared_error(y_val, val_pred):.2f}\")\n",
+    "print(f\"Test R2 Score: {r2_score(y_test, test_pred):.2f}\")\n",
+    "print(f\"Val R2 Score: {r2_score(y_val, val_pred):.2f}\\n\")"
    ]
   },
   {
@@ -250,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -266,19 +295,24 @@
      "output_type": "stream",
      "text": [
       "Random Forest Results:\n",
-      "MSE: 0.03\n",
-      "R2 Score: 0.97\n",
+      "Test MSE: 0.03\n",
+      "Val MSE: 0.03\n",
+      "Test R2 Score: 0.97\n",
+      "Val R2 Score: 0.97\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf = RandomForestRegressor(n_estimators=100, random_state=20)\n",
     "rf.fit(X_train, y_train)\n",
-    "rf_pred = rf.predict(X_test)\n",
+    "test_pred = rf.predict(X_test)\n",
+    "val_pred = rf.predict(X_val)\n",
     "print(\"Random Forest Results:\")\n",
-    "print(f\"MSE: {mean_squared_error(y_test, rf_pred):.2f}\")\n",
-    "print(f\"R2 Score: {r2_score(y_test, rf_pred):.2f}\\n\")\n"
+    "print(f\"Test MSE: {mean_squared_error(y_test, test_pred):.2f}\")\n",
+    "print(f\"Val MSE: {mean_squared_error(y_val, val_pred):.2f}\")\n",
+    "print(f\"Test R2 Score: {r2_score(y_test, test_pred):.2f}\")\n",
+    "print(f\"Val R2 Score: {r2_score(y_val, val_pred):.2f}\\n\")\n"
    ]
   },
   {
@@ -455,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +568,7 @@
        " np.float32(0.9613352))"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -574,13 +608,6 @@
      "text": [
       "\n",
       "Running trial with seed 42\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
      ]
     },
     {
